force-app/main/default/objects/Candidate__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Phone</type>
</CustomField>