force-app/main/default/objects/Candidate__c/fields/HiringEventId__c.field-meta.xml
<CustomField>
    <fullName>HiringEventId__c</fullName>
    <label>Hiring Event</label>
    <referenceTo>Hiring_Event__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>