force-app/main/default/objects/Candidate__c/fields/ResumeLink__c.field-meta.xml
<CustomField>
    <fullName>ResumeLink__c</fullName>
    <label>Resume Link</label>
    <type>Url</type>
</CustomField>