force-app/main/default/objects/Candidate__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMTS</fullName>
            </value>
            <value>
                <fullName>MTS</fullName>
            </value>
            <value>
                <fullName>SMTS</fullName>
            </value>
            <value>
                <fullName>LMTS</fullName>
            </value>
            <value>
                <fullName>Software Engineering AMTS</fullName>
                <isActive>false</isActive>
                <label>Software Engineering AMTS</label>
            </value>
            <value>
                <fullName>Software Engineering LMTS</fullName>
                <isActive>false</isActive>
                <label>Software Engineering LMTS</label>
            </value>
            <value>
                <fullName>Software Engineering MTS</fullName>
                <isActive>false</isActive>
                <label>Software Engineering MTS</label>
            </value>
            <value>
                <fullName>Software Engineering SMTS</fullName>
                <isActive>false</isActive>
                <label>Software Engineering SMTS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>